--- a/P1Resume.html
+++ b/P1Resume.html
@@ -9,6 +9,7 @@
     <div>
         <h1>Resume</h1>
         <h2>Giang Nguyen</h2>
+        <p>A bit information about me</p>
     </div>
 </body>
 </html>
