--- a/P1Resume.html
+++ b/P1Resume.html
@@ -10,6 +10,7 @@
         <h1>Resume</h1>
         <h2>Giang Nguyen</h2>
         <p>A bit information about me</p>
+        <p> Name: </p>
     </div>
 </body>
 </html>
