--- a/P1Resume.html
+++ b/P1Resume.html
@@ -1,3 +1,5 @@
+<!-- Giang Nguyen -->
+<!-- 1/31/2021 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,9 +10,32 @@
 <body>
     <div>
         <h1>Resume</h1>
-        <h2>Giang Nguyen</h2>
-        <p>A bit information about me</p>
-        <p> Name: </p>
+        <ul class="person-info">
+            <section id="name">
+                <h2>Name</h2>
+                <p>Giang Vu Binh Nguyen</p>
+            </section>
+            <section id="mailing-address">
+                <h2>Mailing Address</h2>
+                <p>Virginia Tech, Blacksburg, Virginia, USA</p>
+            </section>
+            <section id="email">
+                <h2>Email</h2>
+                <p>giangvubinhn@vt.edu</p>
+            </section>
+            <section id="skills">
+                <h2>Skills</h2>
+                <nav>
+                    <a href="#">HTML</a> |
+                    <a href="#">CSS</a> |
+                    <a href="#">JavaScript</a> |
+                    <a href="#">Python</a> | 
+                    <a href="#">Java</a>
+                  </nav>
+            </section>
+        </ul>
+        <img id="image" src="/vt-logo.png"/>
+        
     </div>
 </body>
 </html>
