--- a/P1Resume.html
+++ b/P1Resume.html
@@ -21,17 +21,17 @@
             </section>
             <section id="email">
                 <h2>Email</h2>
-                <p>giangvubinhn@vt.edu</p>
+                <a href="#">giangvubinhn@vt.edu</a>
             </section>
             <section id="skills">
                 <h2>Skills</h2>
                 <nav>
-                    <a href="#">HTML</a> |
-                    <a href="#">CSS</a> |
-                    <a href="#">JavaScript</a> |
-                    <a href="#">Python</a> | 
-                    <a href="#">Java</a>
-                  </nav>
+                    <li>HTML</li> 
+                    <li>CSS</li> 
+                    <li>JavaScript</li> 
+                    <li>Python</li> 
+                    <li>Java</li>
+                </nav>
             </section>
         </ul>
         <img id="image" src="/vt-logo.png"/>
